# akane

./: .env  .gitignore  Cargo.toml  akane.db
migrations/2024-08-17-174038_create_projects/: up.sql
migrations/2024-08-18-113343_create_users/: up.sql
src/: main.rs
src/models/: mod.rs  project.rs  schema.rs  user.rs
src/repository/: database.rs  mod.rs  projects.rs  user.rs
src/routes/: mod.rs  projects.rs  user.rs
src/styles/: app.css  colours.css  others.css  placements.css  resets.css  sizes.css  ui.css  variables.css
src/views/: mod.rs  page.rs  projects.rs  user.rs
